[package]
authors = ["Wu Young <doomsplayer@gmail.com>"]
description = "Sidekiq compatible server in Rust"
homepage = "https://github.com/doomsplayer/sidekiq-rs"
license = "MIT"
name = "sidekiq-rs"
repository = "https://github.com/doomsplayer/sidekiq-rs"
version = "0.7.1-pre"
readme = "README.md"
keywords = ["sidekiq", "worker", "resque", "ruby"]

[dependencies]
chan = "0.1"
chan-signal = "0.2"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8"
error-chain = "0.12"
libc = "0.2"
log = "0.4"
r2d2 = "0.8"
r2d2_redis = "0.14"
rand = "0.8"
random_choice = "0.3"
redis = "0.20"
serde = "1.0"
#serde_derive = "0.9"
serde_json = "1.0"
threadpool = "1.0"
futures = "0.3"
futures-cpupool = "0.1"
hado = "0.1"

[dev-dependencies]
structopt = "0.0.3"
structopt-derive = "0.0.3"

[features]
default = []

[lib]
name = "sidekiq"
